# climaker

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
climaker/: __init__.py  parser.py  parser_builder.py  processor.py  reducer.py  spec.py
climaker/argdef/: __init__.py  argdef.py  interfaces.py  reducer.py  value_parser.py  value_reducer.py
climaker/argparser/: argparser.py  builder.py
climaker/composer/: __init__.py  interfaces.py  merging.py
climaker/dialect/: __init__.py  base.py  interfaces.py
climaker/dialect/linux_default/: __init__.py  dialect.py  tokenizer.py
climaker/dialect/shared/: __init__.py  finalizer.py  tokens.py
climaker/dialect/shared/finalizer/: __init__.py  errors.py  finalizer.py
climaker/dialect/shared/token_parser/: __init__.py  errors.py  exceptions.py  token_parser.py  tokens.py
climaker/finalizer/: __init__.py  finalizer.py  interfaces.py  merge_finalizer.py
climaker/interface/: __init__.py  argparser.py  dialect.py  finalizer.py  parser.py  typevars.py
climaker/parser/: __init__.py  exceptions.py  parse_result.py  parser.py  result.py  token_walker.py
climaker/tokenizer/: __init__.py  linux_style_tokenizer.py  tokens.py
climaker/tokens/: tokens.py
climaker/types/: __init__.py  argtree.py  errors.py
climaker/util/: __init__.py  result.py  stringtools.py  walker.py
tests/: test_parser.py
tests/test_dialect/test_linux_default/: test_tokenizer.py
tests/test_parser/: test_parser.py
tests/test_token_consumer/: test_token_consumer.py
tests/test_tokenizer/: test_linux_style_tokenizer.py
