[tool.poetry]
name = "climaker"
version = "0.2.0"
description = "A tool to build a CLI arguments parser with subcommands"
authors = ["Gleb Getmanenko <mrp4p3r@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MrP4p3r/climaker"
repository = "https://github.com/MrP4p3r/climaker"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: User Interfaces"
]
packages = [
    { include = "climaker", from = "." }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
